picture showing on login

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,5 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<!-- <a href="https://www.linkedin.com/uas/oauth2/authorization">Get Auth Code</a> -->
+
+{{#if profile}}
+    <img src="{{profile.pictureUrl}}">
+{{/if}}
